Added projects for core library and test fixture

--- a/SogdianMerchant/SogdianMerchant.csproj
+++ b/SogdianMerchant/SogdianMerchant.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.12.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SogdianMerchant.Core\SogdianMerchant.Core.csproj" />
+  </ItemGroup>
+
 </Project>
